2010-04-15  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14021: Simplify the code to get nested GET Parameters with TS
	* Fixed bug #14120: Add a method to check if database is connected

2010-04-15  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0beta1

2010-04-13  Susanne Moog <typo3@susanne-moog.de>

	* Fixed bug #5699: Sitemap Content Element does not	honorate Workspaces

2010-04-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual.

2010-04-14  Patrick Broens  <patrick@patrickbroens.nl>

	* Added feature #14109: Add Automatic versioning of CSS and JS files mentioned in #13998 to install tool

2010-04-14  Benjamin Mack  <benni@typo3.org>

	* Updated NEWS.txt

2010-04-14  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13732: External URL only indexes first page [indexed_search]
	* Raised DBAL version from 1.1.1 to 1.1.2

2010-04-13  Ernesto Baschny  <ernst@cron-it.de>

	* Added feature #13998: Introduce automatic versioning of CSS and JS files (thanks to Lars Houmark)

2010-04-13  Benjamin Mack  <benni@typo3.org>

	* Added feature #13865: Possibility to configure alternative parameter for jumpurl filelinks (Thanks to Sebastian Gebhard)

2010-04-13  Susanne Moog <typo3@susanne-moog.de>

	* Added feature #5500: Load Inline Elements On Demand (thanks to Harald Glaser & Vladimir Podkovanov)
	* Added feature #5678: Missing clearer div in csc-textpic-intext-left/csc-textpic-intext-right

2010-04-13  Dmitry Dulepov <dmitry.dulepov@gmail.com>

	* Fixed bug #14027: Tweak: Add "tiff" to imagefile_ext array
	* Fixed bug #14023: choose proper variable namings in tslib_cObj::getGlobal()
	* Fixed bug ##1740: date parameters are not configurable in indexed search

2010-04-13  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14088: Change typo3/install/index.php install tool locked message to proper HTML and CSS

2010-04-13  Stanislas Rolland  <typo3@sjbr.ca>
