@@ -1,3 +1,7 @@
+2010-04-15  Patrick Broens  <patrick@patrickbroens.nl>
+
+	* Fixed bug #14117: RuntimeException thrown within the exception handler when wrong database credentials
+
 2010-04-15  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
 	* Fixed bug #14021: Simplify the code to get nested GET Parameters with TS
